--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <title>Welcome</title>
-<link rel="stylesheet" href="/1.css">
+<link rel="stylesheet" href="1.css">
 
 <!-- man, inspecting a web page doesn't do anything special, nice try. -->
 
@@ -48,5 +48,6 @@
         Updated in: January 18th 2026</p>
 
     </body>
+
 
 </head>
