--- a/Index/Characters/OCS.html
+++ b/Index/Characters/OCS.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="/Index/Characters/ocs.css">
+<link rel="stylesheet" href="Index/Characters/ocs.css">
 <title>OCs</title>
 
 <head>
@@ -32,4 +32,5 @@
         </div>
     </div>
     </body>
+
 </head>
