--- a/Index/Commsions/index.html
+++ b/Index/Commsions/index.html
@@ -7,7 +7,7 @@
     <body class="page1">
 
         <h1>COMMISSIONS!!</h1>
-        <p><a href="/index.html" style="text-decoration: none; color: white;" class="button">BACK</a></p>
+        <p><a href="index.html" style="text-decoration: none; color: white;" class="button">BACK</a></p>
         <br><hr><br>
         <div class="box">
         <p>Choose your option.</p>
@@ -21,3 +21,4 @@
 
 
 </head>
+
