--- a/Index/QnA/Generalqna.html
+++ b/Index/QnA/Generalqna.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <title>Q&A</title>
-<link rel="stylesheet" href="/Index/QnA/CSS/qna.css">
+<link rel="stylesheet" href="Index/QnA/CSS/qna.css">
 
 <head>
 
     <body class="escape">
 
         <h1 class="bigtext">GENERAL Q&A</h1>
-        <br><p><a href="/Index/QnA/index.html" class="boxbutton">BACK</a></p><br>
+        <br><p><a href="Index/QnA/index.html" class="boxbutton">BACK</a></p><br>
         <hr><br>
 
         <div style="text-align: left; margin-left: 12%; margin-right: 12%;" class="openingscene">
@@ -39,6 +39,7 @@
         </div>
         <br><hr><br>
     </body>
+
 
 
 
