--- a/Index/QnA/index.html
+++ b/Index/QnA/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <title>Q&A</title>
-<link rel="stylesheet" href="/Index/QnA/CSS/qna.css">
+<link rel="stylesheet" href="Index/QnA/CSS/qna.css">
 
 <head>
 
@@ -8,7 +8,7 @@
 
         <h1 class="bigtext">QUESTIONS & ANSWERS</h1>
         <p>For fair reasons I made different pages for different topics, these goes from simple to detailed.</p>
-        <br><p><a href="/index.html" class="boxbutton">BACK</a></p><br>
+        <br><p><a href="index.html" class="boxbutton">BACK</a></p><br>
         <hr><br>
         <p><a href="/Index/QnA/Generalqna.html" class="boxbutton">GENERAL Q&A</a></p>
         <div style="text-align: left; margin-left: 12%; margin-right: 12%;" class="openingscene">
@@ -26,6 +26,7 @@
 
         <br><hr><br>
     </body>
+
 
 
 
