--- a/Index/QnA/Generalqna.html
+++ b/Index/QnA/Generalqna.html
@@ -34,7 +34,7 @@
             <h1>A:</h1><p>Visual Studio Code.<br>Nothing special man...</p>
             <hr>
             <h1>Q:</h1><p>Are you silly</p>
-            <h1>A:</h1><img src="/Index/images/just dont m8.png" class="swag">
+            <h1>A:</h1><img src="Index/images/just dont m8.png" class="swag">
 
         </div>
         <br><hr><br>
@@ -44,3 +44,4 @@
 
 
 </head>
+
