--- a/Index/Commsions/robloxcms.html
+++ b/Index/Commsions/robloxcms.html
@@ -46,9 +46,9 @@
 
             <br><br><br><br><hr><br>
             <h1 style="font-size: 42px;">EXAMPLES</h1><br>
-            <a><img src="/Index/images/renderex1.png" class="imagesss"></a><br>
-            <a><img src="/Index/images/renderex2.png" class="imagesss"></a><br>
-            <a><img src="/Index/images/renderex3.png" class="imagesss"></a>
+            <a><img src="Index/images/renderex1.png" class="imagesss"></a><br>
+            <a><img src="Index/images/renderex2.png" class="imagesss"></a><br>
+            <a><img src="Index/images/renderex3.png" class="imagesss"></a>
             
             <br><br><br><br><hr><br>
             <h1 style="font-size: 42px;">PAYMENT OPTIONS</h1>
@@ -152,4 +152,5 @@
 
 
 </head>
+
 
