--- a/Index/Characters/OCS.html
+++ b/Index/Characters/OCS.html
@@ -13,7 +13,7 @@
         <hr>
         <h1>&#9786; Leo &#9786;</h1>
         <p>Full Name: Leonora</p>
-        <img src="/Index/images/leo.webp" class="take">
+        <img src="Index/images/leo.webp" class="take">
         <div class="aaa">
         <p>
             - Age: 22<br>
@@ -34,4 +34,5 @@
     </body>
 
 </head>
+
 
