--- a/Index/AboutMe/abtme.html
+++ b/Index/AboutMe/abtme.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <title>About Me</title>
-<link rel="stylesheet" href="Index/AboutMe/abtdesign.css">
+<link rel="stylesheet" href="/Index/AboutMe/abtdesign.css">
 
 <head>
 
@@ -64,4 +64,5 @@
     </body>
 
 </head>
+
 
